src/objects/Opportunity_Farmer__c.object
<CustomObject>
    <fields>
        <fullName>Access_to_Drinking_Water__c</fullName>
        <label>Access to Drinking Water</label>
        <picklist>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Phone_Contact__c</fullName>
        <description>Opportunity Farmer&apos;s alternate Phone contact</description>
        <label>Alternate Phone Contact</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Sources_Of_Income__c</fullName>
        <label>Alternate Sources of Income</label>
        <picklist>
            <picklistValues>
                <fullName>Crop Trading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Groceries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irrigation Farming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Livestock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remittances</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Annual_Income_From_Alternative_Sources__c</fullName>
        <inlineHelpText>in UGX</inlineHelpText>
        <label>Annual Income From Alternative Sources</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Type__c</fullName>
        <description>Type of account this farmer has with the bank</description>
        <label>Bank Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Savings Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Account</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bank__c</fullName>
        <description>Opportunity Farmer&apos;s Bank</description>
        <label>Bank</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <description>Opportunity Farmer Bank&apos;s branch</description>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Banking_System_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is the Opportunity Farmer an Existing Banking System</inlineHelpText>
        <label>Existing Banking System Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ID_Expiration_Date__c</fullName>
        <label>ID Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Identification_Number__c</fullName>
        <description>Opportunity Farmer&apos;s Identification Number as read from Identity Type presented</description>
        <label>Identification Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identification_Type__c</fullName>
        <label>Identification Type</label>
        <picklist>
            <picklistValues>
                <fullName>Passport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voter&apos;s card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citizen&apos;s ID / LC ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Driving permit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LC letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employer&apos;s ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Land_Ownership__c</fullName>
        <label>Land Ownership</label>
        <picklist>
            <picklistValues>
                <fullName>Traditional Ownership / Long-Term Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formal Ownership</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Livestock__c</fullName>
        <label>Livestock</label>
        <picklist>
            <picklistValues>
                <fullName>Goats</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sheep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pigs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cattle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rabbits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Loan_Account_Types__c</fullName>
        <description>Type of Loan account owned by this farmer</description>
        <label>Loan Account Types</label>
        <picklist>
            <picklistValues>
                <fullName>Individual loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group loans</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divorced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Widow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Widower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Separated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_Season_Crops__c</fullName>
        <label>Next Season Crops</label>
        <picklist>
            <picklistValues>
                <fullName>Maize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gnuts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bananas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coffee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cotton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sugar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tobacco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maize		ckw admin, 3/18/2013 5:36 PM</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Dependants__c</fullName>
        <label>Number of Dependants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <description>The person object for this Opportunity Farmer</description>
        <label>Person</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>Opportunity Farmers</relationshipLabel>
        <relationshipName>Opportunity_Farmers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Phone_Contact_Landline__c</fullName>
        <description>(Optional) Opportunity Farmer Landline Contact</description>
        <label>Phone Contact(Landline)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Name__c</fullName>
        <description>Farmer&apos;s Preferred Name</description>
        <label>Preferred Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Season_Crops__c</fullName>
        <label>Previous Season Crops</label>
        <picklist>
            <picklistValues>
                <fullName>Maize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gnuts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bananas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coffee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cotton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sugar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tobacco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Primary_Business__c</fullName>
        <description>Farmer&apos;s Private Business</description>
        <label>Primary Business</label>
        <picklist>
            <picklistValues>
                <fullName>Farmer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Input Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transporter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processor</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Primary_Language_Proficiency__c</fullName>
        <label>Primary Language Proficiency</label>
        <picklist>
            <picklistValues>
                <fullName>Read</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Write</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Primary_Language__c</fullName>
        <label>Primary Language</label>
        <picklist>
            <picklistValues>
                <fullName>Luganda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lusoga</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lumasaba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swahili</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lunyakitara</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ateso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Luo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lugbara</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Road_Access__c</fullName>
        <label>Road Access</label>
        <picklist>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Savings_Account_Types__c</fullName>
        <description>Type of savings account for this farmer</description>
        <label>Savings_Account_Type</label>
        <picklist>
            <picklistValues>
                <fullName>Ordinary savings Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agro Savings Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Target savings Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed deposit Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extra Save Account</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Soil_Type__c</fullName>
        <label>Soil Type</label>
        <picklist>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Opportunity Farmer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Opportunity Farmer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Farmers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>